# cloud-addon-registry-cli

./: CHANGELOG.md  Cargo.toml  README.md  addon-permissions.json  readme.md
.github/workflows/: integration.yml
src/: docker_registry.rs  lib.rs  login.rs  main.rs  registry.rs
src/dto/: addons.rs  mod.rs
tests/: CMakeLists.txt  Dockerfile  Dockerfile-aarch64  Dockerfile-armhf  addon.yml  main.cpp
