[package]
name = "ohx-addon-publish"
version = "0.0.1-preview"
authors = ["David Gräff <david.graeff@web.de>"]
edition = "2018"
license = "MIT"
description = "This is the CLI to automate building and publishing an OHX home automation addon"
readme = "readme.md"
keywords = ["home_automation", "home", "automation"]
categories = ["api-bindings"]
repository = "https://github.com/openhab-nodes/cloud-addon-registry-cli"

[dependencies]
# Parsing of the addons.yml file
serde_yaml = "0.8.9"
regex = { version ="1.3.1", default-features = false, features=["std"] }
serde = { version = "^1.0", features = ["derive"]}
serde_json = {version="^1.0"}
failure = {version="^0.1"}

# Binary
env_logger = {version="^0.6", features=["termcolor", "atty", "humantime"], optional = true }
structopt = {version="^0.3", optional = true }
dirs = {version="2.0.2", optional = true }
log = {version="0.4.8", optional = true }
reqwest = { version ="^0.9", default-features = false, features=["rustls-tls"], optional = true }
webbrowser = {version="0.5.2", optional = true }
chrono = {version="0.4.9", optional = true }
console = "0.9.0"
indicatif = "0.12.0"
semver = "0.9.0"
tokio = "0.2.0-alpha.5"
tokio-net = {version="0.2.0-alpha.5",features=["process"]}
prettytable-rs = "0.8.0"


[features]
build-binary = ["env_logger", "structopt", "dirs", "log", "reqwest", "webbrowser", "chrono"]
default = ["build-binary"]

[[bin]]
name = "ohx-addon-publish"
required-features = ["build-binary"]

[profile.release]
lto = true
